--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jakubwegner/bundle-test",
-    "type": "symfony-bundle",
+    "type": "project",
     "description": "Symfony bundle which provides OAuth 2.0 authorization/resource server capabilities.",
     "keywords": ["oauth2"],
     "homepage": "https://www.trikoder.net/",
