--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,4 @@
 {
     "name": "jakubwegner/bundle-test",
-    "type": "project",
-    "description": "Symfony bundle which provides OAuth 2.0 authorization/resource server capabilities.",
-    "license": "MIT"
+    "type": "project"
 }
